...
                android:layout_marginEnd="4dp"
                android:contentDescription="Private account"
                android:tint="@color/grey" />

            <!-- Username -->
            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
...
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <!-- Full Name -->
            <TextView
                android:id="@+id/fullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginTop="12dp"/>

            <!-- Bio -->
            <TextView
                android:id="@+id/bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_marginTop="4dp"/>
...
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp"
                android:gravity="center_vertical">
                
                <Button
                    android:id="@+id/btnFollow"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:layout_weight="1"
                    android:text="Follow"
                    android:textSize="14sp"
                    android:textColor="@android:color/white"
...
