...
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/greysearch" />

                <EditText
                    android:id="@+id/etQuery"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="8dp"
                    android:hint="Search"
                    android:textColor="@color/black"
...
                android:layout_height="1dp"
                android:layout_marginTop="6dp"
                android:background="@color/light_grey" />

            <!-- RecyclerView for users -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvUsers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:nestedScrollingEnabled="false" />

        </LinearLayout>
...
